Fixes resizer overflow bug on sidebar, https://github.com/isdampe/BosonEditorExperimental/issues/1

--- a/assets/boson/scss/boson.scss
+++ b/assets/boson/scss/boson.scss
@@ -12,7 +12,7 @@ body {
 
 .resize-element {
 	position: fixed;
-	width: 10px;
+	width: 5px;
 	z-index: 9999px;
 	background: transparent;
 	height: 100%;
